--- a/RD3/Views/CommunicationView.xaml
+++ b/RD3/Views/CommunicationView.xaml
@@ -14,8 +14,8 @@
     Width="640"
     Height="480"
     d:DataContext="{d:DesignInstance Type=viewmodels:CommunicationViewModel}"
-    FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="{DynamicResource NormalFontSize}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
