--- a/RD3/Views/ControlView.xaml
+++ b/RD3/Views/ControlView.xaml
@@ -17,8 +17,8 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     Background="{StaticResource BackGroundBrush}"
-    FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="12"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
