--- a/RD3/Views/DOEDesignView.xaml
+++ b/RD3/Views/DOEDesignView.xaml
@@ -17,8 +17,8 @@
     Height="530"
     d:DataContext="{d:DesignInstance Type=viewmodels:DOEDesignViewModel}"
     rd3:DraggableUserControlAttach.IsDraggable="True"
-    FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="{DynamicResource NormalFontSize}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
