--- a/RD3/Views/EditClientView.xaml
+++ b/RD3/Views/EditClientView.xaml
@@ -14,6 +14,12 @@
     Height="350"
     d:DataContext="{d:DesignInstance Type=viewmodels:EditClientViewModel}"
     rd3:DraggableUserControlAttach.IsDraggable="True"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window">
