--- a/RD3/Views/ProjectView.xaml
+++ b/RD3/Views/ProjectView.xaml
@@ -15,8 +15,8 @@
     d:DesignHeight="700"
     d:DesignWidth="1350"
     Background="{StaticResource BackGroundBrush}"
-    FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="{DynamicResource NormalFontSize}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
