--- a/RD3/Views/RegisterView.xaml
+++ b/RD3/Views/RegisterView.xaml
@@ -15,7 +15,8 @@
     Height="250"
     d:DataContext="{d:DesignInstance Type=viewmodels:RegisterViewModel}"
     rd3:DraggableUserControlAttach.IsDraggable="True"
-    TextElement.FontFamily="{StaticResource CHNFontFamily}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
