--- a/RD3/Views/UserView.xaml
+++ b/RD3/Views/UserView.xaml
@@ -14,6 +14,12 @@
     Width="920"
     Height="645"
     d:DataContext="{d:DesignInstance Type=viewmodels:UserViewModel}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window">
