--- a/RD3/App.xaml
+++ b/RD3/App.xaml
@@ -36,13 +36,19 @@
             <SolidColorBrush x:Key="ControlAssociatedModeBrush" Color="#99CBFF" />
             <SolidColorBrush x:Key="ControlDisabledModeBrush" Color="#D4D7DE" />
             <!--  定义字体资源  -->
-            <FontFamily x:Key="ENGFontFamily">/RD3;component/Assets/NotoSans-Regular.otf</FontFamily>
-            <FontFamily x:Key="CHNFontFamily">/RD3;component/Assets/SourceHanSansSC-Regular-2.otf</FontFamily>
+            <FontFamily x:Key="AppFontFamily">SimSun</FontFamily>
+            <!--<FontFamily x:Key="NotoSansFamily">/RD3;component/Fonts/#Noto Sans</FontFamily>
+            <FontFamily x:Key="MiSansFamily">/RD3;component/Fonts/#MiSans</FontFamily>
+            <FontFamily x:Key="AlibabaFamily">/RD3;component/Fonts/#阿里巴巴普惠体 2.0 55 Regular</FontFamily>-->
             <!--  定义全局样式  -->
-            <Style TargetType="{x:Type TextElement}">
-                <!--  还可以设置其他字体属性，如FontSize  -->
-                <Setter Property="FontSize" Value="14" />
-            </Style>
+            <!--<Style TargetType="{x:Type TextElement}">
+                <Setter Property="FontSize" Value="{StaticResource NormalFontSize}" />
+                <Setter Property="FontFamily" Value="{DynamicResource AppFamily}" />
+            </Style>-->
+            <!--<Style TargetType="TextBlock">
+                <Setter Property="FontSize" Value="{StaticResource NormalFontSize}" />
+                <Setter Property="FontFamily" Value="{DynamicResource NotoSansFamily}" />
+            </Style>-->
             <Style x:Key="BorderCard" TargetType="{x:Type Border}">
                 <Setter Property="Border.CornerRadius" Value="8" />
                 <Setter Property="Border.Padding" Value="5" />
