--- a/RD3/Views/CalibrateView.xaml
+++ b/RD3/Views/CalibrateView.xaml
@@ -12,8 +12,8 @@
     d:DesignHeight="680"
     d:DesignWidth="900"
     Background="{StaticResource BackGroundBrush}"
-    TextElement.FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="{DynamicResource NormalFontSize}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
