--- a/RD3/Views/DOEMainView.xaml
+++ b/RD3/Views/DOEMainView.xaml
@@ -15,8 +15,8 @@
     Height="530"
     d:DataContext="{d:DesignInstance Type=viewmodels:DOEMainViewModel}"
     rd3:DraggableUserControlAttach.IsDraggable="True"
-    FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="{DynamicResource NormalFontSize}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
