--- a/RD3/Views/EditExperimentParamView.xaml
+++ b/RD3/Views/EditExperimentParamView.xaml
@@ -18,6 +18,12 @@
     Height="880"
     d:DataContext="{d:DesignInstance Type=vm:EditExperimentParamViewModel}"
     rd3:DraggableUserControlAttach.IsDraggable="True"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window">
