--- a/RD3/Views/FeedView.xaml
+++ b/RD3/Views/FeedView.xaml
@@ -19,8 +19,8 @@
     Height="560"
     d:DataContext="{d:DesignInstance Type=viewmodels:FeedViewModel}"
     rd3:DraggableUserControlAttach.IsDraggable="True"
-    TextElement.FontFamily="{StaticResource CHNFontFamily}"
-    TextElement.FontSize="{DynamicResource NormalFontSize}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
