--- a/RD3/Views/IndexView.xaml
+++ b/RD3/Views/IndexView.xaml
@@ -22,6 +22,12 @@
     d:DesignWidth="1385"
     Background="{StaticResource BackGroundBrush}"
     SizeChanged="UserControl_SizeChanged"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
     mc:Ignorable="d">
     <UserControl.Resources>
         <Style BasedOn="{StaticResource CheckBoxBaseStyle}" TargetType="CheckBox">
@@ -67,8 +73,10 @@
             x:Name="LoginSnakeBar"
             Grid.Row="1"
             Grid.ColumnSpan="2"
-            Width="200"
+            Width="350"
             Height="100"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
             Panel.ZIndex="1"
             MessageQueue="{materialDesign:MessageQueue}" />
         <Grid Grid.ColumnSpan="3">
