--- a/RD3/Views/MCUDebugView.xaml
+++ b/RD3/Views/MCUDebugView.xaml
@@ -13,9 +13,8 @@
     d:DataContext="{d:DesignInstance Type=viewmodels:MCUDebugViewModel}"
     d:DesignHeight="1450"
     d:DesignWidth="800"
-    FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="{DynamicResource NormalFontSize}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
