--- a/RD3/Views/ProgressView.xaml
+++ b/RD3/Views/ProgressView.xaml
@@ -9,6 +9,12 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     rd3:DraggableUserControlAttach.IsDraggable="True"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
     mc:Ignorable="d">
     <Grid>
         <StackPanel Width="100">
