--- a/RD3/Views/SelfCheckView.xaml
+++ b/RD3/Views/SelfCheckView.xaml
@@ -13,6 +13,12 @@
     Width="640"
     Height="360"
     d:DataContext="{d:DesignInstance Type=viewmodels:SelfCheckViewModel}"
+    TextElement.FontFamily="{DynamicResource AppFontFamily}"
+    TextElement.FontSize="{DynamicResource TextFontSize}"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window">
