--- a/RD3/Views/AboutView.xaml
+++ b/RD3/Views/AboutView.xaml
@@ -8,10 +8,12 @@
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:rd3="clr-namespace:RD3"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="600"
     Height="350"
     d:DataContext="{d:DesignInstance Type=viewmodels:AboutViewModel}"
+    rd3:DraggableUserControlAttach.IsDraggable="True"
     TextElement.FontFamily="{DynamicResource AppFontFamily}"
     TextElement.FontSize="{DynamicResource SubHeadFontSize}"
     TextElement.FontWeight="Regular"
